@@ -1,10 +1,26 @@
+/*
+ * Copyright (c) 2012-2025, ivan (ivan.dannels@gmail.com).
+ * <p>
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
+ * <p>
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package org.apaas.knowledge.interfaces.rest;
 
 import org.apaas.knowledge.application.service.KnowledgeApplicationService;
-import org.apaas.knowledge.domain.model.Document;
+import org.apaas.knowledge.domain.model.Knowledge;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
@@ -23,12 +39,12 @@ import java.util.concurrent.Executors;
 @RestController
 @RequestMapping("/")
 public class KnowledgeController {
-
+    
     @Autowired
     private KnowledgeApplicationService knowledgeApplicationService;
-
+    
     private final ExecutorService executorService = Executors.newCachedThreadPool();
-
+    
     /**
      * 接收前端输入的接口，返回流式响应
      */
@@ -53,7 +69,7 @@ public class KnowledgeController {
         
         return emitter;
     }
-
+    
     /**
      * 文件上传接口
      */
@@ -66,16 +82,16 @@ public class KnowledgeController {
             return ResponseEntity.badRequest().body(result);
         }
     }
-
+    
     /**
      * 获取已上传文件列表的接口
      */
     @GetMapping("/files")
-    public ResponseEntity<List<Document>> getFiles() {
-        List<Document> files = knowledgeApplicationService.getAllFiles();
+    public ResponseEntity<List<Knowledge>> getFiles() {
+        List<Knowledge> files = knowledgeApplicationService.getAllFiles();
         return ResponseEntity.ok(files);
     }
-
+    
     /**
      * 清空知识库的接口
      */
@@ -88,7 +104,7 @@ public class KnowledgeController {
             return ResponseEntity.badRequest().body(result);
         }
     }
-
+    
     /**
      * 选择文件的接口 - 支持选择文件和排除单个文件
      */
@@ -105,9 +121,7 @@ public class KnowledgeController {
             result = knowledgeApplicationService.excludeFile(excludeFile);
         } else if (requestBody.containsKey("file_names")) {
             String fileNamesStr = (String) requestBody.get("file_names");
-            List<String> fileNames = fileNamesStr != null && !fileNamesStr.isEmpty() 
-                    ? Arrays.asList(fileNamesStr.split(",")) 
-                    : List.of();
+            List<String> fileNames = fileNamesStr != null && !fileNamesStr.isEmpty() ? Arrays.asList(fileNamesStr.split(",")) : List.of();
             result = knowledgeApplicationService.selectFiles(fileNames);
         } else {
             result = knowledgeApplicationService.selectFiles(List.of());
@@ -119,7 +133,7 @@ public class KnowledgeController {
             return ResponseEntity.badRequest().body(result);
         }
     }
-
+    
     /**
      * 删除单个文件的接口
      */
@@ -132,15 +146,13 @@ public class KnowledgeController {
             return ResponseEntity.badRequest().body(result);
         }
     }
-
+    
     /**
      * 批量删除文件的接口
      */
     @PostMapping("/batch-delete-files")
     public ResponseEntity<Map<String, Object>> batchDeleteFiles(@RequestParam(required = false) String file_names) {
-        List<String> fileNames = file_names != null && !file_names.isEmpty() 
-                ? Arrays.asList(file_names.split(",")) 
-                : List.of();
+        List<String> fileNames = file_names != null && !file_names.isEmpty() ? Arrays.asList(file_names.split(",")) : List.of();
         
         Map<String, Object> result = knowledgeApplicationService.batchDeleteFiles(fileNames);
         if ((Boolean) result.getOrDefault("success", false)) {
